--- a/templates/auteur/show.html.twig
+++ b/templates/auteur/show.html.twig
@@ -9,26 +9,26 @@
 
     <table class="table" border="solid">
         <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ auteur.id }}</td>
-            </tr>
-            <tr>
-                <th>Prenom Nom</th>
-                <td>{{ auteur.nomPrenom }}</td>
-            </tr>
-            <tr>
-                <th>Sexe</th>
-                <td>{{ auteur.sexe }}</td>
-            </tr>
-            <tr>
-                <th>Date de naissance</th>
-                <td>{{ auteur.dateDeNaissance ? auteur.dateDeNaissance|date('Y-m-d') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Nationalite</th>
-                <td>{{ auteur.nationalite }}</td>
-            </tr>
+        <tr>
+            <th>Id</th>
+            <td>{{ auteur.id }}</td>
+        </tr>
+        <tr>
+            <th>Prenom Nom</th>
+            <td>{{ auteur.nomPrenom }}</td>
+        </tr>
+        <tr>
+            <th>Sexe</th>
+            <td>{{ auteur.sexe }}</td>
+        </tr>
+        <tr>
+            <th>Date de naissance</th>
+            <td>{{ auteur.dateDeNaissance ? auteur.dateDeNaissance|date('Y-m-d') : '' }}</td>
+        </tr>
+        <tr>
+            <th>Nationalite</th>
+            <td>{{ auteur.nationalite }}</td>
+        </tr>
         </tbody>
     </table>
     <br>
@@ -37,7 +37,9 @@
             <div class="col-xl-3 col-lg-3 col-md-2 col-sm-1 col-xs-1"></div>
             <div class="col-xl-6 col-lg-6 col-md-8 col-sm-10 col-xs-10">
                 <div class="d-flex justify-content-around">
-                    <button type="button" class="btn btn-primary btn-lg"><a class="text-decoration-none text-white" href="{{ path('auteur_edit', {'id': auteur.id}) }}">Modifier</a></button>
+                    <button type="button" class="btn btn-primary btn-lg"><a class="text-decoration-none text-white"
+                                                                            href="{{ path('auteur_edit', {'id': auteur.id}) }}">Modifier</a>
+                    </button>
                     {{ include('auteur/_delete_form.html.twig') }}
                 </div>
             </div>
