--- a/templates/genre/show.html.twig
+++ b/templates/genre/show.html.twig
@@ -8,14 +8,14 @@
 
     <table class="table" border="solid">
         <tbody>
-            <tr>
-                <th>ID</th>
-                <td>{{ genre.id }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ genre.nom }}</td>
-            </tr>
+        <tr>
+            <th>ID</th>
+            <td>{{ genre.id }}</td>
+        </tr>
+        <tr>
+            <th>Nom</th>
+            <td>{{ genre.nom }}</td>
+        </tr>
         </tbody>
     </table>
     <br>
@@ -24,7 +24,9 @@
             <div class="col-xl-3 col-lg-3 col-md-2 col-sm-1 col-xs-1"></div>
             <div class="col-xl-6 col-lg-6 col-md-8 col-sm-10 col-xs-10">
                 <div class="d-flex justify-content-around">
-                    <button type="button" class="btn btn-primary btn-lg"><a class="text-decoration-none text-white" href="{{ path('genre_edit', {'id': genre.id}) }}">Modifier</a></button>
+                    <button type="button" class="btn btn-primary btn-lg"><a class="text-decoration-none text-white"
+                                                                            href="{{ path('genre_edit', {'id': genre.id}) }}">Modifier</a>
+                    </button>
                     {{ include('genre/_delete_form.html.twig') }}
                 </div>
             </div>
